<resources>
    <string name="app_name">Choice</string>
    <string name="time">10.00</string>
    <string name="view_comments">Comment</string>
    <string name="comment_hint">enter comment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choice">Choice</string>
    <string name="finish_post">Finish</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="choice_writeUp">• The choice Camera takes the picture forn snap a 30seconds session and generate the frame images for t
        he choiceUser, and also the camera captures pictures every seconds, this might be t
 The choice Camera takes the picture forn snap a 30seconds session and generate the frame images for t
        he choiceUser, and also the camera captures pictures every seconds, this might be t


        decisions which will differ from phone to phone. But in cases where by the device is used by many in di
        fferent time interval, this feature is not needed
         The choice Camera takes the picture forn snap a 30seconds session and generate the frame images for t
        he choiceUser, and also the camera captures pictures every seconds, this might be t


        decisions which will differ from phone to phone. But in cases where by the device is used by many in di
        fferent time interval, this feature is not needed
         The choice Camera takes the picture forn snap a 30seconds session and generate the frame images for t
        he choiceUser, and also the camera captures pictures every seconds, this might be t


        decisions which will differ from phone to phone. But in cases where by the device is used by many in di
        fferent time interval, this feature is not needed

        decisions which will differ from phone to phone. But in cases where by the device is used by many in di
        fferent time interval, this feature is not needed.</string>
    <string name="last_seen">Last seen</string>
    <string name="send">Send</string>
    <string name="mute_notification_for_this_chat">Mute Conversation</string>
    <string name="edit_about">Account info</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="settings">Settings</string>
    <string name="post_settings">Post Settings</string>
    <string name="privacy_settings">Privacy and Security</string>
    <string name="contacts">Contacts</string>
    <string name="me">Me</string>
    <string name="delete_post">Are you sure you want to delete this post?</string>
    <string name="private_comment_settings">Disable to stop receiving direct messages from your post comment</string>
    <string name="repeat_post_text">Repeat a post to make it seen by people outside your contact, and contacts of your contacts</string>
    <string name="post_settings_info">This settings will take effect from your next or current post onward</string>
    <string name="privacy_search">Search only my contacts</string>
    <string name="privacy_search_description">Enable to stop receiving search results outside your contacts</string>
    <string name="message_request">People without your number can send you message from groups or comment section</string>
    <string name="unblock_user">Unblock</string>
    <string name="block_user">Block</string>
    <string name="unblock">Unblock</string>
    <string name="Unblock">Unblock</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="leave_group">Leave group</string>
    <string name="add_member">Invite Member</string>
    <string name="message_receipt">Allow other users to know when you have seen their messages</string>
    <string name="upername">CHOICE</string>
    <string name="close_repeat">Turn of see posts that repeats from your contacts. You will still be able to see what your contacts repost.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="post">Post</string>
    <string name="re_post">re-post</string>
    <string name="repeats">repeats</string>
</resources>
